# mimeparser1.0

./: CMakeLists.txt  README.md  main.cpp
parserCore/: CMakeLists.txt  mimeTree.cpp  mimeTree.h  parser.cpp  parser.h  parserException.h
parserCore/test/: CMakeLists.txt  parserTest.cpp  parserTest.cpp.in  treeTest.cpp
